--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Sistema de Registro</title>
 </head>
 <body>
-    
+    <h1> Correo: leo.09.aranda@gmail.com</h1>
+    <p>Intructor</p>
 </body>
-</html>
+</html>git add.
